<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="15dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/forecastItem"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="140">

        <TextView
            android:id="@+id/temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="20"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="20"/>

        <TextView
            android:id="@+id/feels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feels_like"
            android:textStyle="bold"
            android:layout_weight="20"/>

        <TextView
            android:id="@+id/feelsLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="20"/>

        <TextView
            android:id="@+id/dt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="30"/>
        <TextView
            android:id="@+id/dateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="30"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>